dataset1235/2025-2/610742602/users/1343319280/executions/677928262_1927446959.log
== RUN (2025-08-23 02:45:12)
-- CODE: 
#  Entrada 
n = float(input("Digite um valor: "))

porcentagem = n * (27 / 100)
acrescimo = n + (n * (42 / 100))
desconto = n - (n * (63 / 100))

# Saída
print(round(porcentagem,2))
print(round(acrescimo,2))
print(round(desconto,2))
         
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:34:30)
-- CODE: 
#  Entrada 
n = float(input("Digite um valor: "))

# Operação
porcentagem = n * (27 / 100)
acrescimo = n + (n * (42 / 100))
desconto = n - (n * (63 / 100))

# Saída
print(round(porcentagem,2))
print(round(acrescimo,2))
print(round(desconto,2))
         
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 02:44:57)
-- CODE: 
#  Entrada 
n = float(input("Digite um valor: "))

porcentagem = n * (27 / 100)
acrescimo = n + (n * (42 / 100))
desconto = n - (n * 63 / 100))

# Saída
print(round(porcentagem,2))
print(round(acrescimo,2))
print(round(desconto,2))
         
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 6
    desconto = n - (n * 63 / 100))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 6
    desconto = n - (n * 63 / 100))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 6
    desconto = n - (n * 63 / 100))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 6
    desconto = n - (n * 63 / 100))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 6
    desconto = n - (n * 63 / 100))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 6
    desconto = n - (n * 63 / 100))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
